syntax="proto3";

package com.rahasak.proto;

message DocumentCreateMessage {
    string id = 1;
    string payload = 2;
}

message DocumentGetMessage {
    string id = 1;
}

message DocumentReplyMessage {
    string id = 1;
    string payload = 2;
}

message StatusReplyMessage {
    string code = 1;
    string msg = 2;
}

service DocumentService {
    rpc createDocument(DocumentCreateMessage) returns (StatusReplyMessage);
    rpc createDocuments(stream DocumentCreateMessage) returns (StatusReplyMessage);
    rpc getDocuments(DocumentGetMessage) returns (stream DocumentReplyMessage);
    rpc streamDocuments(stream DocumentGetMessage) returns (stream DocumentReplyMessage);
}